--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -7,3 +7,10 @@ zh-TW:
   task_content: 任務內容
   back_to_task_list: 回到任務列表
   sure: 確認
+  delete_sure: 確認刪除？
+  task:
+    "add_success": 任務新增成功！
+    "edit_success": 編輯成功！
+    "delete_success": 刪除成功！
+    "delete_fail": 刪除失敗！
+    "not_found": 找不到任務喔！
