--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,3 +11,21 @@ en:
   sure: Sure
   cant_be_blank: can't be blank
   sort_by: sort by...
+  state_search: State Search
+  activerecord:
+  attributes:
+    task:
+      aasm_state: State
+      aasm_state/pending: Pending
+      aasm_state/processing: Processing
+      aasm_state/finishing: Finishing
+  task_created_successful: task created successful!
+  task_edited_successful: task edited successful!
+  task_delete_sure: delete task?
+  task_deleted_successful: task deleted successful!
+  task_deleted_failed: task deleted failed!
+  cant_find_task: can't find task!
+  task_state: Task State
+  pending: Pending
+  processing: Processing
+  finishing: Finishing
