--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,10 +15,14 @@ en:
   activerecord:
   attributes:
     task:
-      aasm_state: State
-      aasm_state/pending: Pending
-      aasm_state/processing: Processing
-      aasm_state/finishing: Finishing
+      state: State
+      state/pending: Pending
+      state/processing: Processing
+      state/finishing: Finishing
+      priority: Priority
+      priority/high: High
+      priority/medium: Medium
+      priority/low: Low
   task_created_successful: task created successful!
   task_edited_successful: task edited successful!
   task_delete_sure: delete task?
