--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -7,7 +7,7 @@ zh-TW:
   create_time: 建立時間
   end_time: 結束時間
   task_content: 任務內容
-  back_to_task_list: 返回
+  back: 返回
   sure: 確認
   cant_be_blank: 不能為空白
   sort_by: 排序方式
@@ -43,3 +43,22 @@ zh-TW:
   low_to_high: 低到高
   high_to_low: 高到低
   advanced_search: 進階搜尋
+  user_admin: 使用者管理
+  new_user: 新增使用者
+  edit_user: 編輯使用者
+  user_name: 使用者名稱
+  email: 信箱
+  password: 密碼
+  system_id: 系統編號
+  edit_user: 編輯
+  delete_user: 刪除
+  user_delete_sure: 確認刪除？
+  task_home: 任務首頁
+  user_admin: 使用者管理
+  task_amount: 任務數量
+  user_created_successful: 使用者新增成功！
+  user_edited_successful: 編輯成功！
+  user_delete_sure: 確認刪除？
+  user_deleted_successful: 使用者已刪除！
+  user_deleted_failed: 刪除失敗！
+  cant_find_user: 找不到此使用者！
