--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,6 +42,7 @@ en:
   selected: Selected...
   low_to_high: Low to High
   high_to_low: High to Low
+  simple_search: Simple Search
   advanced_search: Advanced Search
   user_admin: User Admin
   new_user: New User
@@ -85,3 +86,4 @@ en:
   user_role: User
   authority: Authority
   task_tags: Task Tags
+  present_account: Present Account
